[package]
name = "songlink-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.133"
serenity = "0.12.4"
tokio = { version = "1.41.1", features = ["full"] }
